# cave-runtime

./: .gitignore  .mailmap  .tdd-red-marker.md  ARCHITECTURE-ELASTIC-SCALE.md  ARCHITECTURE.md  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Dockerfile  LICENSE  MAINTAINERS.md  NOTICE  RAY_REPORT.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  cave-runtime.yaml  cleanup-git.sh  deny.toml
crates/cave-ai-obs/: CHANGELOG.md  Cargo.toml  parity.manifest.toml
crates/cave-ai-obs/src/: engine.rs  lib.rs  models.rs  routes.rs  store.rs
crates/cave-ai-obs/tests/: qwen_drafted.rs
crates/cave-alerts/: CHANGELOG.md  Cargo.toml  parity.manifest.toml
crates/cave-alerts/rules/: SCHEMA.md  cave-apiserver.yaml  cave-pg.yaml  cave-scheduler.yaml
crates/cave-alerts/src/: engine.rs  grouping.rs  inhibit.rs  lib.rs  matcher.rs  models.rs  receivers.rs  routes.rs  routing.rs  rules.rs  silence.rs  store.rs  tenant.rs
crates/cave-alerts/tests/: qwen_drafted.rs
crates/cave-apigw/: Cargo.toml  PARITY_REPORT.md  parity.manifest.toml
crates/cave-apigw/src/: access_log.rs  acme_hook.rs  admin.rs  cli.rs  consumer.rs  declarative.rs  error.rs  grpc.rs  health.rs  http1.rs  http2.rs  http3.rs  lb.rs  lib.rs  matcher.rs  metrics.rs  models.rs  pqc.rs  proxy.rs  router.rs  store.rs  tls.rs  tracing_otel.rs  websocket.rs
crates/cave-apigw/tests/: parity_self_audit.rs  smoke_end_to_end.rs
crates/cave-apiserver/: Cargo.toml  PARITY_REPORT.md  observability.toml  parity.manifest.toml
crates/cave-apiserver/src/: admission.rs  aggregated_apiserver.rs  aggregator_v2.rs  aggregator_v3.rs  audit.rs  audit_backends.rs  audit_policy_v2.rs  audit_worm.rs  auth_review.rs  beta_apis.rs  builtin_admission.rs  cel_eval.rs  conversion.rs  conversion_v1.rs  crd_controller.rs  discovery.rs  discovery_v2.rs  dra.rs  encryption_provider.rs  endpointslice_mirror.rs  error.rs  etcd_backend.rs  field_rbac.rs  kep_v1_34.rs  lib.rs  map_v2.rs  mutating_admission_policy.rs  node_restriction.rs  openapi_v3.rs  parity_tests.rs  pod_security.rs  priority_fairness.rs  rbac.rs  resources.rs  routes.rs  selectors.rs  server_side_apply.rs  service_account_token.rs  storage_migration.rs  storage_registry.rs  (+6 more)
crates/cave-apiserver/tests/: parity_anti_regression.rs  parity_self_audit.rs  qwen_drafted.rs  test_gap_close_edges.rs  upstream_port.rs  upstream_port_batch3.rs
crates/cave-artifacts/: CHANGELOG.md  Cargo.toml  PARITY_REPORT.md  observability.toml  parity-nexus.manifest.toml  parity.manifest.toml
crates/cave-artifacts/src/: content.rs  distribution.rs  error.rs  export.rs  lib.rs  models.rs  plugin.rs  publication.rs  rbac.rs  repair.rs  repository.rs  routes.rs  signing.rs  store.rs  sync.rs
crates/cave-artifacts/tests/: auth_integration.rs  parity_self_audit.rs  pulp_plugin_ansible_collection.rs  pulp_plugin_container_manifest.rs  pulp_plugin_deb_control.rs  pulp_plugin_file_manifest.rs  pulp_plugin_helm_chart.rs  pulp_plugin_maven_pom.rs  pulp_plugin_ostree_refs.rs  pulp_plugin_python_pep440.rs  pulp_plugin_rpm_header.rs  qwen_drafted.rs  scan_integration.rs  test_gap_close_edges.rs
crates/cave-auth/: .k6_manifest_delta.json  Cargo.toml  PARITY_REPORT.md  README.md  parity.manifest.toml
crates/cave-auth/src/: abac.rs  audit.rs  auth_middleware.rs  auth_routes.rs  builtin.rs  claims.rs  factory.rs  jwks.rs  jwt_middleware.rs  lib.rs  middleware.rs  oidc.rs  okta.rs  pat.rs  provider.rs  rbac.rs  scim.rs  session.rs  tenant.rs  token.rs  token_exchange.rs  tokens.rs
crates/cave-auth/tests/: federation_fixtures.rs  observability_phase3_alerts.rs  parity_self_audit.rs  qwen_drafted.rs  saml_artifact.rs  saml_attrmap.rs  saml_ecdsa.rs  saml_ecdsa_messages.rs  saml_nameid.rs  saml_slo.rs  saml_upstream_port.rs  saml_xmlenc.rs  upstream_port_dpop.rs  webauthn_authentication.rs  webauthn_cose.rs  webauthn_mds.rs  webauthn_model.rs  webauthn_registration.rs
crates/cave-backup/: CHANGELOG.md  Cargo.toml  parity.manifest.toml
crates/cave-backup/src/: engine.rs  filesystem.rs  gc.rs  hooks.rs  lib.rs  models.rs  routes.rs  schedule.rs  storage.rs  types.rs  volume.rs
crates/cave-backup/tests/: qwen_drafted.rs
crates/cave-cache/: CHANGELOG.md  Cargo.toml  PARITY_REPORT.md  observability.toml  parity.manifest.toml
crates/cave-cdc/: CHANGELOG.md  Cargo.toml  parity.manifest.toml
crates/cave-cert-manager/: CHANGELOG.md  Cargo.toml  PARITY_REPORT.md  README.md  parity.manifest.toml
crates/cave-certs/: Cargo.toml  README.md  parity.manifest.toml
crates/cave-cli/: CHANGELOG.md  Cargo.toml  README.md  parity.manifest.toml
crates/cave-cloud-controller-manager/: Cargo.toml  PARITY_REPORT.md  README.md  observability.toml  parity.manifest.toml
crates/cave-cluster/: CHANGELOG.md  Cargo.toml  parity.manifest.toml
crates/cave-compliance/: Cargo.toml  parity.manifest.toml
crates/cave-container-scan/: CHANGELOG.md  Cargo.toml  PARITY_REPORT.md  README.md  observability.toml  parity.manifest.toml
crates/cave-controller-manager/: CHANGELOG.md  Cargo.toml  PARITY_REPORT.md  observability.toml  parity.manifest.toml
crates/cave-core/: Cargo.toml  parity.manifest.toml
crates/cave-cost/: Cargo.toml  README.md  parity.manifest.toml
crates/cave-cost-alloc/: Cargo.toml  README.md  parity.manifest.toml
crates/cave-cri/: CHANGELOG.md  Cargo.toml  PARITY_REPORT.md  README.md  observability.toml  parity.manifest.toml
crates/cave-crm/: Cargo.toml  PARITY_REPORT.md  README.md  observability.toml  parity.manifest.toml
crates/cave-crossplane/: Cargo.toml  README.md  observability.toml  parity.manifest.toml
crates/cave-dashboard/: Cargo.toml  PARITY_REPORT.md  observability.toml  parity.manifest.toml
crates/cave-datafusion/: Cargo.toml  PARITY_REPORT.md  README.md  observability.toml  parity.manifest.toml
crates/cave-db/: Cargo.toml  parity.manifest.toml
crates/cave-dependency-track/: Cargo.toml  PARITY_REPORT.md  parity.manifest.toml
crates/cave-deploy/: Cargo.toml  PARITY_REPORT.md  parity.manifest.toml
crates/cave-desktop/: Cargo.toml  parity.manifest.toml
(+7074 files in other folders)
