[workspace]
resolver = "2"
members = ["crates/*/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Cave Runtime Contributors"]
homepage = "https://github.com/cave-runtime/cave-runtime"
repository = "https://github.com/cave-runtime/cave-runtime"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
# Database
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
# Auth / JWT
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
prometheus-client = "0.23"
# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
config = "0.14"
clap = { version = "4", features = ["derive"] }
# Cryptography
sha2 = "0.10"
hex = "0.4"
# Security scanning
aho-corasick = "1"
regex = "1"
tree-sitter = "0.24"
# Kubernetes
kube = { version = "0.97", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
# Crypto / Signing
ring = "0.17"
ed25519-dalek = "2"
# ECDSA over NIST P-256 — real signer/verifier for Cosign classical mode.
p256 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8", "ecdh"] }
# ECDSA over NIST P-384 / P-521 — XMLDSig ECDSA-SHA384 / ECDSA-SHA512 for SAML 2.0 signing.
p384 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8"] }
p521 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8"] }
# HTTP client (for upstream tracking, uptime probes)
reqwest-middleware = "0.4"
# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
# Testing — container-backed integration tests
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
# Markdown rendering
pulldown-cmark = "0.12"
# Encoding
base64 = "0.22"
# Random number generation
rand = { version = "0.8", features = ["std"] }
# Additional deps used by platform modules
bytes = "1"
parking_lot = "0.12"
dashmap = "6"
flate2 = "1"
futures = "0.3"
lz4_flex = "0.11"
petgraph = "0.6"
snap = "1"
tokio-util = { version = "0.7", features = ["full"] }
zstd = "0.13"
# === S3 ===
# Trivy port: vuln DB persistence + IaC HCL parsing + secret patterns
sled = { version = "0.34", default-features = false }
hcl-rs = "0.18"
# === S3 end ===
# Kerberos keytab parsing — big-endian binary frames per MIT krb5 kt_file.c
byteorder = "1"
# Kerberos GSSAPI safe wrapper. Pinned 0.7 — see crates/cave-auth/Cargo.toml comment for
# platform caveats (Heimdal vs MIT krb5 symbol gaps on macOS).
libgssapi = "0.7"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
