[package]
name = "cave-apigw"
description = "API gateway — Kong (Apache-2.0) + Envoy Proxy (Apache-2.0) reimplementation; routes/services/upstreams, plugins, gRPC/WS/HTTP3, K8s Gateway API CRDs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
cave-auth = { path = "../cave-auth" }
cave-db = { path = "../cave-db" }

# Web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# Crypto
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }

# HTTP client for upstream proxy + Admin
reqwest = { workspace = true }

# Regex for matcher + bot detection + transform
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
