[package]
name = "cave-apiserver"
version = "0.1.0"
edition = "2021"
description = "Kubernetes-compatible API server — resource CRUD, watch, admission, RBAC"
license = "Apache-2.0"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "1"
dashmap = "6"
tokio-stream = "0.1"
async-trait = "0.1"
