[package]
name = "cave-apiserver"
version = "0.1.0"
edition = "2021"
description = "Kubernetes-compatible API server — resource CRUD, watch, admission, RBAC"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cave-apiserver"
readme = "README.md"
rust-version.workspace = true
keywords = ["kubernetes", "api", "rbac", "admission", "crud"]
categories = ["api-bindings", "authentication", "network-programming"]
license = "AGPL-3.0-or-later"

[dependencies]
cave-kernel = { path = "../cave-kernel" }
cave-etcd = { path = "../cave-etcd" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
dashmap = "6"
ring = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = "0.10"
# CEL evaluator for ValidatingAdmissionPolicy (KEP-3488). Pure-Rust impl
# of the Google CEL spec; v0.9 covers boolean / arithmetic / has() /
# list/map indexing — enough for the K8s VAP grammar.
cel-interpreter = "0.9"

[dev-dependencies]
reqwest = { workspace = true }

[features]
live-integration = []
