[package]
name = "cave-artifacts"
description = "Consolidated artifact platform — Harbor + Pulp + Nexus parity (best-of-breed)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
cave-auth = { path = "../cave-auth" }
cave-db = { path = "../cave-db" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
# Harbor / OCI / Docker V2 deps (moved from cave-registry on consolidation)
sha2 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
url = "2"

[dev-dependencies]
tower = { workspace = true }
