[package]
name = "cave-artifacts"
description = "Consolidated artifact platform — Harbor + Pulp + Nexus parity (best-of-breed)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
cave-auth = { path = "../cave-auth" }
cave-db = { path = "../cave-db" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
# Harbor / OCI / Docker V2 deps (moved from cave-registry on consolidation)
sha2 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
url = "2"
# Cosign module: reuse cave-certs hybrid container (Ed25519 + ML-DSA-65 fixture).
cave-certs = { path = "../cave-certs" }
ed25519-dalek = { workspace = true }
p256 = { workspace = true }
rand = { workspace = true }
# Pulp content-plugin deep-port (Phase 2):
#   flate2  — gzip wrappers for primary.xml.gz, Packages.gz, sdist tar.gz, collection tarballs, chart .tgz
#   tar     — extract control.tar.gz from .deb, METADATA from wheel/sdist, FILES.json from ansible, Chart.yaml from helm chart
#   serde_yaml — Chart.yaml + role meta/main.yml
flate2 = { workspace = true }
tar = "0.4"
serde_yaml = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
