[package]
name = "cave-auth"
description = "Full Okta AuthN+AuthZ — OIDC, RBAC, ABAC, SCIM 2.0, PAT, sessions, multi-tenancy"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cave-auth"
readme = "README.md"
rust-version.workspace = true
keywords = ["auth", "oidc", "rbac", "scim", "identity"]
categories = ["authentication", "web-programming"]
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
axum = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
# Crypto: SHA-256 for PAT hashing
ring = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
# SAML 2.0 protocol parsing — Keycloak `saml-core` port (src/saml/)
quick-xml = "0.37"
flate2    = "1.0"
# UMA 2.0 + Token Exchange (RFC 8693) + DPoP (RFC 9449) + JWE (RFC 7516)
# Honest dependency choice: roll our own JWE on top of aes-gcm + rsa + p256
# + hkdf + sha2 rather than josekit, because (a) we already depend on
# jsonwebtoken for JWT parse, (b) josekit pulls in openssl which the
# workspace deliberately avoids (ring-only), (c) we only need the four
# RFC 7518 algorithms listed in `[parity]` below.
sha2    = { workspace = true }
sha1    = "0.10"
# p256 with `ecdh` feature for ECDH-ES key agreement in JWE.
p256    = { version = "0.13", features = ["ecdsa", "pem", "pkcs8", "ecdh"] }
aes-gcm = "0.10"
aes     = "0.8"
cbc     = { version = "0.1", features = ["alloc"] }
cipher  = { version = "0.4", features = ["block-padding", "alloc"] }
hmac    = "0.12"
rsa     = "0.9"
hkdf    = "0.12"
hex     = { workspace = true }
