[package]
name = "cave-auth"
description = "Full Okta AuthN+AuthZ — OIDC, RBAC, ABAC, SCIM 2.0, PAT, sessions, multi-tenancy"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cave-auth"
readme = "README.md"
rust-version.workspace = true
keywords = ["auth", "oidc", "rbac", "scim", "identity"]
categories = ["authentication", "web-programming"]
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
axum = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
# Crypto: SHA-256 for PAT hashing
ring = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
# SAML 2.0 protocol parsing — Keycloak `saml-core` port (src/saml/)
quick-xml = "0.37"
flate2    = "1.0"
# Keytab (big-endian binary) parsing — keycloak federation/kerberos port (src/kerberos/)
byteorder = "1.5"
# WebAuthn / FIDO2 — webauthn4j + Keycloak `webauthn` port (src/webauthn/)
ciborium      = "0.2"
coset         = "0.3"
bitflags      = "2"
p256          = { workspace = true }
rsa           = "0.9"
ed25519-dalek = { workspace = true, features = ["rand_core"] }
sha2          = { workspace = true, features = ["oid"] }
hex           = { workspace = true }
