[package]
name = "cave-cache"
description = "Distributed cache — Redis/Valkey replacement with pub/sub"
description = "In-memory cache — Redis replacement with all data types, pub/sub, transactions"
description = "Distributed cache — Redis/Valkey replacement with pub/sub"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cave-core = { path = "../cave-core" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ring = { workspace = true }
[dev-dependencies]
tokio = { workspace = true }
