[package]
name = "cave-cdc"
description = "CDC pipeline (Debezium reimpl) — Postgres logical, MySQL binlog, MongoDB oplog, transactional outbox, cave-streams sink"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
