[package]
name = "cave-cert-manager"
description = "Cert-Manager control plane — Issuer + ClusterIssuer + Certificate + CertificateRequest CRDs (cert-manager v1.20.2 parity)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/cave-cert-manager"
keywords = ["cert-manager", "acme", "pki", "tls", "kubernetes"]
categories = ["cryptography", "network-programming"]

[dependencies]
cave-core = { path = "../cave-core" }
cave-acme = { path = "../cave-acme" }
cave-pki  = { path = "../cave-pki" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
