[package]
name = "cave-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CAVE Runtime CLI — terminal access to all platform modules"

[[bin]]
name = "cave"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["env"] }
colored = "2"
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
futures.workspace = true
cave-llm-gateway = { path = "../cave-llm-gateway" }
