[package]
name = "cavectl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CAVE Runtime CLI — single binary, native + compatibility surfaces (per ADR-RUNTIME-CLI-CONSOLIDATION-001)"
authors.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cavectl"
readme = "README.md"
keywords = ["cli", "runtime", "cave", "command-line", "utility"]
categories = ["command-line-utilities", "development-tools", "network-programming"]

[lib]
name = "cavectl"
path = "src/lib.rs"

[[bin]]
name = "cavectl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
colored = "2"
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
httpmock = "0.7"
