[package]
name = "cave-cloud-controller-manager"
description = "Cloud-controller-manager parity scaffold (cloud-provider trait, node / service / route controllers, Hetzner + Azure provider basics)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
cave-kernel = { path = "../cave-kernel" }
toml = { workspace = true }
